--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "eslint-plugin-import": "^2.22.1",
     "typescript": "^4.0.5",
     "eslint-plugin-sonarjs": "^0.5.0"
+  },
+  "dependencies": {
+    "lint": "^0.7.0"
   }
 }
